// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with multiple movies 1`] = `
<section
  aria-label="Movie Viewer"
  class="movie-viewer"
>
  <section
    class="dropdown-container"
  >
    <form
      class="search-bar"
    >
      <input
        class="input-field"
        placeholder="Search for movies..."
        type="search"
        value=""
      />
    </form>
    <button
      class="dropdown-button"
    >
      Filter
    </button>
  </section>
  <section
    class="suggestion-container"
  />
  <main
    class="movie-display"
  >
    <article
      class="movie-card movie-card--large"
    >
      <figure
        class="image-container"
      >
        <img
          alt="Third Movie poster"
          class="image"
          loading="lazy"
          src="mocked-image-url"
        />
        <button
          aria-label="Add to favorites: Third Movie"
          class="favorite-btn "
          title="Add to favorites"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
        </button>
      </figure>
      <section
        class="movie-content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
          >
            Third Movie
          </h2>
          <aside
            class="meta"
          >
            <time
              class="year"
              datetime="2023-10-01"
            >
              2023
            </time>
            <span
              class="rating"
            >
              ★ 
              9.1
              /10
            </span>
          </aside>
        </header>
        <section
          class="overview-container"
        >
          <p
            class="overview "
          >
            Third movie description
          </p>
        </section>
      </section>
    </article>
  </main>
  <aside
    class="movie-jump-controls"
  >
    <label
      class="jump-label"
      for="movie-select"
    >
      Go to movie
    </label>
    <select
      aria-label="Select movie to view. 3 movies available"
      class="movie-select"
      id="movie-select"
    >
      <option
        value="0"
      >
        1
        . 
        Third Movie
      </option>
      <option
        value="1"
      >
        2
        . 
        First Movie
      </option>
      <option
        value="2"
      >
        3
        . 
        Second Movie
      </option>
    </select>
  </aside>
  <aside
    class="keyboard-hint"
  >
    <p>
      Use ← → arrow keys to navigate
    </p>
  </aside>
  <nav
    aria-label="Movie navigation"
    class="movie-nav-controls"
    id="movie-navigation"
  >
    <button
      aria-label="Go to previous movie: Second Movie. Currently viewing Third Movie"
      class="nav-btn nav-btn--prev"
    >
      ← Prev
    </button>
    <aside
      class="movie-position"
    >
      <span
        class="position-text"
      >
        1
         of 
        3
      </span>
    </aside>
    <button
      aria-label="Go to next movie: First Movie. Currently viewing Third Movie"
      class="nav-btn nav-btn--next"
    >
      Next →
    </button>
  </nav>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="sr-only"
  />
</section>
`;

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with no movies 1`] = `
<section
  aria-label="Movie Viewer"
  class="movie-viewer"
>
  <section
    aria-label="Filters"
    class="filter-panel"
  >
    <header
      class="filter-header"
    >
      <h2
        class="filter-title"
      >
        Filters
      </h2>
      <section
        class="filter-actions"
      >
        <button
          aria-disabled="true"
          class="filter-reset-btn"
          disabled=""
          type="button"
        >
          Clear filters
        </button>
      </section>
    </header>
    <form
      class="filter-grid"
    >
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="genre-select"
        >
          Genre
        </label>
        <select
          class="filter-select"
          id="genre-select"
        >
          <option
            value=""
          >
            Any
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="year-select"
        >
          Year
        </label>
        <select
          class="filter-select"
          id="year-select"
        >
          <option
            value=""
          >
            Any
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control filter-control-rating"
      >
        <label
          class="filter-label"
        >
          Rating
        </label>
        <section
          class="rating-range"
        >
          <section
            class="rating-field"
          >
            <label
              class="sub-label"
              for="min-rating"
            >
              Min rating
            </label>
            <input
              id="min-rating"
              max="10"
              min="0"
              step="0.5"
              type="range"
              value="0"
            />
            <span
              class="rating-value"
            >
              0.0
            </span>
          </section>
          <section
            class="rating-field"
          >
            <label
              class="sub-label"
              for="max-rating"
            >
              Max rating
            </label>
            <input
              id="max-rating"
              max="10"
              min="0"
              step="0.5"
              type="range"
              value="10"
            />
            <span
              class="rating-value"
            >
              10.0
            </span>
          </section>
        </section>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
          for="sort-by"
        >
          Sort by
        </label>
        <select
          class="filter-select"
          id="sort-by"
        >
          <option
            value="popularity"
          >
            Popularity
          </option>
          <option
            value="rating"
          >
            Rating
          </option>
          <option
            value="release_date"
          >
            Release date
          </option>
          <option
            value="title"
          >
            Title
          </option>
        </select>
      </fieldset>
      <fieldset
        class="filter-control"
      >
        <label
          class="filter-label"
        >
          Order
        </label>
        <section
          class="order-toggle"
        >
          <button
            aria-pressed="false"
            class="order-btn "
            type="button"
          >
            Asc
          </button>
          <button
            aria-pressed="true"
            class="order-btn is-active"
            type="button"
          >
            Desc
          </button>
        </section>
      </fieldset>
      <fieldset
        class="filter-control favorites-control"
      >
        <label
          class="filter-label"
          for="favorites-only"
        >
          Favorites
        </label>
        <label
          class="favorites-row"
          for="favorites-only"
        >
          <input
            aria-label="Show favorites only"
            class="favorites-switch"
            id="favorites-only"
            type="checkbox"
          />
          <span
            class="favorites-label"
          >
            Favorites only
          </span>
          <span
            class="favorites-chip"
            title="Favorites count"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-heart"
              fill="currentColor"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
              />
            </svg>
             
            0
          </span>
        </label>
      </fieldset>
    </form>
    <aside
      class="filter-active"
    >
      <small
        class="filter-hint"
      >
        No active filters
      </small>
    </aside>
  </section>
  <form
    class="search-bar"
  >
    <input
      class="input-field"
      placeholder="Search for movies..."
      type="search"
      value=""
    />
  </form>
  <p
    class="no-movies"
  >
    No movies available
  </p>
</section>
`;

exports[`MovieViewer > Snapshot Tests > should render MovieViewer with single movie 1`] = `
<section
  aria-label="Movie Viewer"
  class="movie-viewer"
>
  <section
    class="dropdown-container"
  >
    <form
      class="search-bar"
    >
      <input
        class="input-field"
        placeholder="Search for movies..."
        type="search"
        value=""
      />
    </form>
    <button
      class="dropdown-button"
    >
      Filter
    </button>
  </section>
  <section
    class="suggestion-container"
  />
  <main
    class="movie-display"
  >
    <article
      class="movie-card movie-card--large"
    >
      <figure
        class="image-container"
      >
        <img
          alt="First Movie poster"
          class="image"
          loading="lazy"
          src="mocked-image-url"
        />
        <button
          aria-label="Add to favorites: First Movie"
          class="favorite-btn "
          title="Add to favorites"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-heart"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
            />
          </svg>
        </button>
      </figure>
      <section
        class="movie-content"
      >
        <header
          class="header"
        >
          <h2
            class="title"
          >
            First Movie
          </h2>
          <aside
            class="meta"
          >
            <time
              class="year"
              datetime="2023-12-25"
            >
              2023
            </time>
            <span
              class="rating"
            >
              ★ 
              8.5
              /10
            </span>
          </aside>
        </header>
        <section
          class="overview-container"
        >
          <p
            class="overview "
          >
            First movie description that is long enough to test truncation behavior
          </p>
        </section>
      </section>
    </article>
  </main>
  <aside
    class="movie-jump-controls"
  >
    <label
      class="jump-label"
      for="movie-select"
    >
      Go to movie
    </label>
    <select
      aria-label="Select movie to view. 1 movies available"
      class="movie-select"
      disabled=""
      id="movie-select"
    >
      <option
        value="0"
      >
        1
        . 
        First Movie
      </option>
    </select>
  </aside>
  <aside
    class="keyboard-hint"
  >
    <p>
      Use ← → arrow keys to navigate
    </p>
  </aside>
  <nav
    aria-label="Movie navigation"
    class="movie-nav-controls"
    id="movie-navigation"
  >
    <button
      aria-label="Go to previous movie: First Movie. Currently viewing First Movie"
      class="nav-btn nav-btn--prev"
      disabled=""
    >
      ← Prev
    </button>
    <aside
      class="movie-position"
    >
      <span
        class="position-text"
      >
        1
         of 
        1
      </span>
    </aside>
    <button
      aria-label="Go to next movie: First Movie. Currently viewing First Movie"
      class="nav-btn nav-btn--next"
      disabled=""
    >
      Next →
    </button>
  </nav>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="sr-only"
  />
</section>
`;
